--- a/addon/manifest.json
+++ b/addon/manifest.json
@@ -21,6 +21,10 @@
     "background": {
         "page": "background/background.html"
     },
+    "options_ui": {
+        "page": "options/options.html",
+        "browser_style": true
+    },
     "browser_specific_settings": {
         "gecko": {
             "id": "yaai@iamkroot",
