--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "Use Aria2 for downloading content in Firefox",
   "dependencies": {
-    "aria2": "^4.1.2"
+    "aria2": "^4.1.2",
+    "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
     "webpack": "^5.12.3",
